--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,36 @@ body{
     width: 100%;
     height: 100%;
     margin: 0;
-    font-family: "freude", sans-serif;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+}
+.overlay{
+    background: rgba(0, 0, 0, 0.2); /* Adjust the color and opacity as needed */
+  z-index: 1;
 }
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100%;
+    
 }
-.header{
- 
+h1,h2,h3{
+    font-family: "freude", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+input:focus {
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+}
+.airplane {
+    position: absolute;
+    width: 40px;
+    opacity: 0;
+    transform: translateY(0);
+    transition: transform 2s linear, opacity 0.5s ease-in;
 }
