--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,10 @@ textarea:focus {
     transform: translateY(0);
     transition: transform 2s linear, opacity 0.5s ease-in;
 }
+
+#waveform {
+    cursor: pointer;
+    position: relative;
+    margin-top: 0;
+    padding-top: 0;
+  }
