--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    transition: background 0.5s ease-in-out;
 }
 .overlay{
     background: rgba(0, 0, 0, 0.2); /* Adjust the color and opacity as needed */
